# mac_dict_to_md

./: .gitignore  README.md  convert.py  mac_dict_to_md.code-workspace  parse.py  pyproject.toml  split.py
src/mac_dict_to_md/: __init__.py  parse.py
tests/: __init__.py  conftest.py  test_convert.py  test_parse.py  test_split.py
tests/fixtures/: complex_entry.xml  fraction_entry.xml  homograph_entry.xml  phrasal_verbs_entry.xml  simple_entry.xml  special_chars_entry.xml
