[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mac-dict-to-md"
version = "0.1.0"
description = "Convert macOS Dictionary XML to Markdown"
requires-python = ">=3.10"
readme = "README.md"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages = ["src/mac_dict_to_md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
